--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     <!--  Scripts-->
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.14.0/jquery.validate.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/jonathansp/jquery-serializeFields@master/src/jquery-serializeFields.js"></script>
     <script src="js/materialize.js"></script>
     <script src="js/init.js"></script>
     <script src="js/script.js"></script>
