--- a/pages/calculadora.html
+++ b/pages/calculadora.html
@@ -4,95 +4,153 @@
 <div class="container">
     <div class="row">
         <div class="row result-calc">
-            <div id="result" class="col s12 grey darken-4 result-calc">
-                0
-            </div>
+            <div id="resultadoCalc" class="col s12 grey darken-4 result-calc">0</div>
         </div>
         <div class="col s3">
-            <button class=" waves-effect waves-light calc-font btn-large" onclick="btnChage(1)">1</button>
-            <button class=" waves-effect waves-light calc-font btn-large" onclick="btnChage(4)">4</button>
-            <button class=" waves-effect waves-light calc-font btn-large" onclick="btnChage(7)">7</button>
-            <button class=" waves-effect waves-light calc-font btn-large" onclick="btnChage(0)">0</button>
+            <button class=" waves-effect waves-light calc-font btn-large" onclick="btnClique(1)">1</button>
+            <button class=" waves-effect waves-light calc-font btn-large" onclick="btnClique(4)">4</button>
+            <button class=" waves-effect waves-light calc-font btn-large" onclick="btnClique(7)">7</button>
+            <button class=" waves-effect waves-light calc-font btn-large" onclick="btnClique(0)">0</button>
         </div>
         <div class="col s3">
-            <button class=" waves-effect waves-light calc-font btn-large" onclick="btnChage(2)">2</button>
-            <button class=" waves-effect waves-light calc-font btn-large" onclick="btnChage(5)">5</button>
-            <button class=" waves-effect waves-light calc-font btn-large" onclick="btnChage(8)">8</button>
+            <button class=" waves-effect waves-light calc-font btn-large" onclick="btnClique(2)">2</button>
+            <button class=" waves-effect waves-light calc-font btn-large" onclick="btnClique(5)">5</button>
+            <button class=" waves-effect waves-light calc-font btn-large" onclick="btnClique(8)">8</button>
             <button class=" waves-effect waves-light deep-orange accent-3 calc-font btn-large"
-                onclick="btnChage('c')">C</button>
+                onclick="btnClique('c')">C</button>
         </div>
         <div class="col s3">
-            <button class=" waves-effect waves-light calc-font btn-large" onclick="btnChage(3)">3</button>
-            <button class=" waves-effect waves-light calc-font btn-large" onclick="btnChage(6)">6</button>
-            <button class=" waves-effect waves-light calc-font btn-large" onclick="btnChage(9)">9</button>
+            <button class=" waves-effect waves-light calc-font btn-large" onclick="btnClique(3)">3</button>
+            <button class=" waves-effect waves-light calc-font btn-large" onclick="btnClique(6)">6</button>
+            <button class=" waves-effect waves-light calc-font btn-large" onclick="btnClique(9)">9</button>
             <button class=" waves-effect waves-light calc-font grey lighten-1 btn-large"
-                onclick="btnChage('=')">=</button>
+                onclick="btnClique('=')">=</button>
         </div>
         <div class="col s3">
             <button class=" waves-effect waves-light blue lighten-1 calc-font btn-large"
-                onclick="btnChage('-')">-</button>
+                onclick="btnClique('-')">-</button>
             <button class=" waves-effect waves-light blue lighten-1 calc-font btn-large"
-                onclick="btnChage('+')">+</button>
+                onclick="btnClique('+')">+</button>
             <button class=" waves-effect waves-light blue lighten-1 calc-font btn-large"
-                onclick="btnChage('/')">/</button>
+                onclick="btnClique('/')">/</button>
             <button class=" waves-effect waves-light blue lighten-1 calc-font btn-large"
-                onclick="btnChage('*')">*</button>
+                onclick="btnClique('*')">*</button>
         </div>
     </div>
 
 
 </div>
 <script>
-    var calc = false
 
-    function btnChage(a) {
-        var result = $('#result').html();
-        if (a === 'c') {
-            $('#result').html(0)
-            calc = false
-        } else if (calc == true) {
-            $('#result').html(a == "=" ? 0 : result)
-            calc = false
+    function returnTipoOperacao(resultado) {
+
+        let adicao = resultado.match(/\+/g) ? resultado.match(/\+/g).length : 0
+        let divisao = resultado.match(/\//g) ? resultado.match(/\//g).length : 0
+        let multiplicacao = resultado.match(/\*/g) ? resultado.match(/\*/g).length : 0
+        let subtracao = resultado.match(/\-/g) ? resultado.match(/\-/g).length : 0
+
+        if (adicao == 1) {
+            return '+'
+        } else if (divisao == 1) {
+            return '/'
+        } else if (multiplicacao == 1) {
+            return '*'
+        } else if (subtracao == 1 && resultado.indexOf('-')) {
+            return '-'
         } else {
-            if (result == 0 && calc == false && a != 0) {
-                $('#result').html(a == "=" || a == '+' || a == '-' || a == '/' || a == '*' ? 0 : a);
-            } else {
-                result = result + '' + a;
-                let arrCalc1 = result.match(/\+/g) ? result.match(/\+/g).length : 0
-                let arrCalc2 = result.match(/\//g) ? result.match(/\//g).length : 0
-                let arrCalc3 = result.match(/\*/g) ? result.match(/\*/g).length : 0
-                let arrCalc4 = result.match(/\-/g) ? result.match(/\-/g).length : 0
-                console.log('arrs', arrCalc1, arrCalc2, arrCalc3, arrCalc4)
-                if (a != '=' && arrCalc1 < 2 && arrCalc1 > 0) {
-                    $('#result').html(result);
-                } else if (a != '=' && arrCalc2 < 2 && arrCalc2 > 0) {
-                    $('#result').html(result);
-                } else if (a != '=' && arrCalc3 < 2 && arrCalc3 > 0) {
-                    $('#result').html(result);
-                } else if (a != '=' && arrCalc4 < 2 && arrCalc4 > 0) {
-                    $('#result').html(result);
+            return false
+        }
+    }
+
+
+    function returnTermosOperacao(termos) {
+
+        let adicao = termos.split('+')
+        let subtracao = termos.split('-')
+        let multiplicacao = termos.split('*')
+        let divisao = termos.split('/')
+
+        if (Boolean(adicao[1])) {
+            return adicao
+        } else if (Boolean(subtracao[1])) {
+            return subtracao
+        } else if (Boolean(multiplicacao[1])) {
+            return multiplicacao
+        } else if (Boolean(divisao[1])) {
+            return divisao
+        } else {
+            return false
+        }
+    }
+
+    function returnarResultadoOperacao(operador, termos) {
+
+        if (operador == '+' && termos) {
+            return parseInt(termos[0]) + parseInt(termos[1])
+        } else if (operador == '-' && termos) {
+            return parseInt(termos[0]) - parseInt(termos[1])
+        } else if (operador == '*' && termos) {
+            return parseInt(termos[0]) * parseInt(termos[1])
+        } else if (operador == '/' && termos) {
+            return parseInt(termos[0]) / parseInt(termos[1])
+        } else {
+            return false
+        }
+
+    }
+
+    function addDigito(valorDisplay, digito, operacao) {
+        console.log('operação', operacao)
+        console.log('sim', valorDisplay.indexOf('-'))
+
+        if (valorDisplay == '0') {
+            return digito
+        } else if (valorDisplay > '0' && digito == '=') {
+            return valorDisplay
+        } else if (operacao && (digito == '+' || digito == '-' || digito == '*' || digito == '/')) {
+            return valorDisplay
+        } else if (valorDisplay.indexOf('-') == 0 && (digito == '-' || digito == '*' || digito == '/')){
+            console.log('sim', valorDisplay.indexOf('-'))
+            return valorDisplay
+        } else {
+            valorDisplay = valorDisplay + '' + digito;
+            return valorDisplay
+        }
+
+    }
+
+
+    function btnClique(digito) {
+
+        var resultadoFinal = 0
+        var displayCalc = $('#resultadoCalc')
+        var resultadoCalc = displayCalc.html();
+        var operacao = returnTipoOperacao(resultadoCalc)
+        var termos = returnTermosOperacao(resultadoCalc)
+
+        if (digito == 'c') {
+            displayCalc.html(0)
+        }
+        else if (digito == '+' || digito == '-' || digito == '*' || digito == '/' || digito == '=') {
+            console.log('digitou o operador', digito)
+            if (displayCalc.html() == '0') {
+                console.log('apertei operador sem valor', digito)
+                displayCalc.html('0')
+            }
+            else {
+                if (operacao && termos) {
+                    console.log('fazaendo calculo', operacao, termos)
+                    resultadoFinal = returnarResultadoOperacao(operacao, termos)
+                    displayCalc.html(resultadoFinal)
                 } else {
-                    var resultado = 0;
-                    calc = true
-
-                    if (result.split('+').length >= 2 && result.indexOf('+') > -1) {
-                        result = result.split('+')
-                        resultado = parseInt(result[0]) + parseInt(result[1])
-                    } else if (result.split('-').length >= 2 && result.indexOf('-') > -1) {
-                        result = result.split('-')
-                        resultado = parseInt(result[0]) - parseInt(result[1])
-                    } else if (result.split('*').length >= 2 && result.indexOf('*') > -1) {
-                        result = result.split('*')
-                        resultado = parseInt(result[0]) * parseInt(result[1])
-                    } else if (result.split('/').length >= 2 && result.indexOf('/') > -1) {
-                        result = result.split('/')
-                        resultado = parseInt(result[0]) / parseInt(result[1])
-                    }
-
-                    $('#result').html(Boolean(resultado) == false ? 0 : resultado);
-
+                    let digitoAdicionado = addDigito(resultadoCalc, digito, operacao)
+                    displayCalc.html(digitoAdicionado)
                 }
             }
+        } else {
+            let valorDisplay = addDigito(resultadoCalc, digito, operacao)
+            displayCalc.html(valorDisplay)
         }
+
     }
 </script>
